--- a/-- template/style.css
+++ b/-- template/style.css
@@ -83,6 +83,21 @@ box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
     font-size: 1.5rem;
 }
 
+/* Loader */
+.loader {
+    border: 16px solid #f3f3f3; 
+    border-top: 16px solid #c02cfa; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 @media screen and (max-width: 1000px){
     .quote-container{
         margin: auto 10px;
